--- a/components/hero.css
+++ b/components/hero.css
@@ -1,5 +1,5 @@
 .hero{
-    background-image: url('floral-transformed.jpeg');
+    background-image: url('../public/floral-transformed.jpeg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
