Changed image paths

--- a/components/about_page/heroAbout.css
+++ b/components/about_page/heroAbout.css
@@ -1,5 +1,5 @@
 .heroAbout{
-    background-image: url('floral-transformed.jpeg');
+    background-image: url('../../public/floral-transformed.jpeg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
