--- a/components/header.css
+++ b/components/header.css
@@ -3,6 +3,9 @@
     justify-content: center;
     align-items: center;
 }
+.mobile__nav{
+    display: none;
+}
 .header__nav{
     display: flex;
     
@@ -36,13 +39,16 @@
         font-size: 16px;
       
      }
+    
 }
 @media (max-width:475px) {
     .header{
         
         justify-content: flex-end;
+       
    }
-   .header__link{
+   
+   #big{
     display: none;
    }
    
@@ -57,6 +63,7 @@
         cursor: pointer;
        margin-bottom: 2rem;
     }
+   
 }
 /*@media (min-width:475px) {
     .container{
